# webshell-scanner

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_signature.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs  scanner.rs
