[package]
name = "webshell-scanner"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Julius C (REIUK LTD)"]
license = "MIT"
description = "A standalone webshell detection tool supporting PHP, JSP, ASP.NET, and Python"
documentation = "https://docs.rs/webshell-scanner"
homepage = "https://github.com/JNC4/webshell-scanner"
repository = "https://github.com/JNC4/webshell-scanner"
readme = "README.md"
keywords = ["security", "webshell", "malware", "detection", "scanner"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/", "tests/", "*.md", "!README.md"]

[dependencies]
regex = "1"
once_cell = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"
colored = "2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "webshell-scanner"
path = "src/main.rs"

[lib]
name = "webshell_scanner"
path = "src/lib.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
